---version 2.0.4 yet to be released---
15-nov-2008 - adelikat - Win32 - re-enabled sound buffer time
15-nov-2008 - adelikat - Clip Left and Right sides taken into account when drawing on screen (record/play/pause, lag & frame counters, messages, etc)
15-nov-2008 - adelikat - win32 - Implemented Drap & Drop for movie files
14-nov-2008 - adelikat - win32 Hex Editor - Dump Rom & Dump PPU to file Dialog - uses ROM to build default filename
14-nov-2008 - adelikat - Win32 Memwatch - Save as dialog - uses ROM name to build default memwatch filename if there is no last used memwatch filename
14-nov-2008 - adelikat - Win32 Text Hooker fixes - Init error checking reinstated, save .tht file no longer crashes, Dialog updates as ROM plays, Remembers window position, fix bug where canceling save as produces an error message, Save As produces default filename based on loaded ROM
14-nov-2008 - adelikat - fixed but when aspect correction and special scaling 3x are set, video was getting resized incorrectly
14-nov-2008 - adelikat - fixed a bug introduced in previous commit, frame display toggle now works when no movie is present
12-nov-2008 - adelikat - allowed frame counter to display even with no movie present
11-nov-2008 - punkrockguy - sdl - savestate slots now mappable [2175167]
10-nov-2008 - adelikat - win32 - removed accel keys from main window
10-nov-2008 - adelikat - Win32 - added Open & Close ROM mappable hotkeys, removed accel functions
10-nov-2008 - punkrockguy - improved the sdl sound code; drasticaly improves quality of sound.
09-nov-2008 - adelikat - minor memory watch menu clean up, removed Ctrl+W hotkey for close (and placed Alt+F4 on the menu name)
08-nov-2008 - zeromus - big endian wasnt compiling. fix issues.
02-nov-2008 - shinydoofy - added --fcmconvert for SDL
02-nov-2008 - zeromus - emulua - add rom.readbyte and rom.readbytesigned

---version 2.0.3 released---

02-nov-2008 - zeromus - fix fcm conversion, recording, and playback of reset and power commands